2004-06-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Instrument transpositions):
	Correct the name of the instrumentTransposition property.

2004-06-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (output): Bug fix so preLilyPondExample
	and postLilyPondExample are called when defined.

2004-06-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/accidental-engraver.cc (update_local_key_signature): fold
	repetitive code.
	(number_accidentals_from_sig): backport code from 2.3. Fixes:
	custom-key-signatures.ly

2004-05-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: 2.2.2

	* lily/tie-performer.cc (stop_translation_timestep): reset
	ties_created_. Fixes bugs/midi-tie.ly,
	bugs/midi-lyrics-barcheck.ly
	
	* scm/define-grobs.scm (all-grob-descriptions): remove
	break-visibility. Should fix: bugs/piano-repeat.ly

	* lily/chord-tremolo-engraver.cc (stop_translation_timestep):
	reset repeat_ after setting stem tremolo. Should fix:
	bugs/tremolo-repeat.ly

	* lily/accidental-engraver.cc (set_property_on_children): copy key
	signature setting. Backport. Should fix:
	bugs/custom-key-signatures.ly

2004-05-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/context-def.cc (filter_engravers): backport.  Fixes:
	crash-bar-number.ly

	* lily/percent-repeat-engraver.cc (try_music): backport. Fixes:
	skipbars-percent-repeat.ly

2004-05-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/rest-collision.cc (do_shift): handle (0-down, 2-up) case
	too.

2004-05-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/ottava-bracket.cc (print): fix ottava on rests.

2004-05-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.2.1
	
	* scm/music-functions.scm (set-accidental-style): use GrandStaff
	iso. PianoStaff.

2004-05-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/lilypond.tely (Top): update version number.

	* lily/lyric-engraver.cc (get_voice_to_lyrics): go higher when