@@ -1,3 +1,9 @@
+2004-06-07  Mats Bengtsson  <mabe@drongo.s3.kth.se>
+
+	* scripts/lilypond-book.py (latex_filter_cmd): Use a temporary
+	file since 'latex "\\nonstopmode \input /dev/stdin"' doesn't work
+	in Cygwin. Warning: ugly hard coded file name used.
+
 2004-06-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* Documentation/user/notation.itely (Instrument transpositions):
